test/files/neg/bug835.scala
object Test extends Application {
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
}
