test/files/neg/bug835.check
bug835.scala:2: error: _*-argument may not appear after other arguments matching a *-parameter
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                                         ^
one error found
